# mcp-vault-wrap

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: design-decisions.md  implementation-plan.md  mvp-architecture-contract.md  mvp-roadmap.md  product-spec.md  technical-design-spec.md
src/: cli.rs  lib.rs  main.rs  migrate.rs  registry.rs  validate.rs
src/commands/: add.rs  doctor.rs  mod.rs  remove.rs  run.rs
src/config/: mod.rs  validate.rs
src/host/: claude_desktop.rs  mod.rs
src/inject/: env.rs  mod.rs
src/relay/: carveouts.rs  mod.rs
src/secret/: keychain.rs  memory.rs  mod.rs
src/transport/: mod.rs  stdio.rs
tests/: run_integration.rs
tests/smoke/: README.md  smoke-migrate.sh  smoke-run.sh
