[package]
name = "mcp-vault-wrap"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Move MCP credentials from plaintext config into macOS Keychain and relay MCP traffic transparently"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "5"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
libc = "0.2"
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = { level = "warn", priority = -1 }
